<resources>

    <string name="app_name">Board Game Collector</string>

    <!-- Main fragment -->
    <string name="main_fragment_label">Board Game Collector</string>
    <string name="main_hello">Hello %1$s!</string>
    <string name="main_num_of_games">Number of games: %1$d</string>
    <string name="main_num_of_extensions">Number of extensions: %1$d</string>
    <string name="main_date_of_last_sync">Date of last syncing: %1$tH:%1$tM %1$td.%1$tm.%1$tY</string>
    <string name="main_button_list_of_games">List of games</string>
    <string name="main_button_list_of_extensions">List of extensions</string>
    <string name="main_button_sync">Synchronization</string>
    <string name="main_button_erase">Erase data</string>

    <!-- Config fragment -->
    <string name="config_fragment_label">Configuration</string>
    <string name="config_btn_start">Start</string>
    <string name="config_name_hint">Name</string>

    <!-- List of games fragment -->
    <string name="list_of_games_fragment">List of games</string>
    <string name="games_table_id_column">ID</string>
    <string name="games_table_image_column">Image</string>
    <string name="games_table_title_column">Title</string>
    <string name="games_table_year_column">Year</string>
    <string name="games_table_rank_column">Rank</string>
    <string name="list_game_image_desc">Image of the game</string>

    <!-- List of extensions fragment -->
    <string name="list_of_extensions_fragment">List of extensions</string>
    <string name="extensions_table_id_column">ID</string>
    <string name="extensions_table_image_column">Image</string>
    <string name="extensions_table_title_column">Title</string>
    <string name="extensions_table_year_column">Year</string>
    <string name="list_extension_image_desc">Image of the extension</string>

    <!-- Synchronization fragment -->
    <string name="sync_fragment">Synchronization</string>
    <string name="sync_btn_start_syncing">Start syncing</string>
    <string name="sync_dialog_title">Do you want to synchronize?</string>
    <string name="sync_dialog_message">Rankings are updated once per day.</string>
    <string name="sync_dialog_yes">Yes</string>
    <string name="sync_dialog_no">No</string>

    <!-- Ranking fragment -->
    <string name="ranking_fragment">Ranking</string>
    <string name="ranking_image_desc">Image of the game</string>
    <string name="ranking_list_date">Date</string>
    <string name="ranking_list_rank">Rank</string>
    <string name="ranking_list_rank_date">%1$tH:%1$tM %1$td.%1$tm.%1$tY</string>

    <!-- Download dialog -->
    <string name="download_dialog_title">Do you want to delete games and extensions?</string>
    <string name="download_dialog_message">Ranks are deleted too.</string>
    <string name="download_dialog_yes">Yes</string>
    <string name="download_dialog_no">No</string>

</resources>